chore: apply auth guard, set bearer headers, update swagger yaml
